--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1511,12 +1511,20 @@ select {
   --purple: rgb(105, 12, 104);
   --yellow: rgb(240, 154, 53);
   --yellow10: rgba(240, 154, 53, 0.1);
+  --yellow30: rgba(240, 154, 53, 0.3);
   --yellow40: rgba(240, 154, 53, 0.4);
   --pink: rgb(234, 78, 80);
   --pink30: rgba(234, 78, 80, 0.3);
+  --pink50: rgba(234, 78, 80, 0.5);
+  --pink70: rgba(234, 78, 80, 0.7);
+  --white10: rgba(255, 255, 255, 0.1);
   --white30: rgba(255, 255, 255, 0.3);
   --white50: rgba(255, 255, 255, 0.5);
   --white70: rgba(255, 255, 255, 0.7);
+  --black10: rgba(0, 0, 0, 0.1);
+  --black30: rgba(0, 0, 0, 0.3);
+  --black50: rgba(0, 0, 0, 0.5);
+  --black70: rgba(0, 0, 0, 0.7);
 }
 
 @font-face {
@@ -1745,6 +1753,10 @@ h5 span {
   text-transform: uppercase;
 }
 
+.black {
+  color: black;
+}
+
 .pink {
   color: var(--pink);
 }
@@ -1765,6 +1777,10 @@ h5 span {
   text-shadow: 0 0 8px white;
 }
 
+.whiteBG {
+  background-color: white;
+}
+
 .pinkBG {
   background-color: var(--pink);
 }
@@ -1779,6 +1795,10 @@ h5 span {
 
 .yellow10BG {
   background-color: var(--yellow10);
+}
+
+.shaded10 {
+  background-color: var(--white10);
 }
 
 .shaded30 {
@@ -2196,9 +2216,19 @@ a:hover {
   font-size: 0.8em;
 }
 
+.button.xxsmall {
+  font-size: 0.7em;
+}
+
 .button.purple {
   background-color: var(--purple);
   border-color: var(--purple);
+}
+
+.button.white {
+  background-color: white;
+  color: var(--pink);
+  border-color: white;
 }
 
 .button.pink {
@@ -2209,6 +2239,36 @@ a:hover {
 .button.yellow {
   background-color: var(--yellow);
   border-color: var(--yellow);
+}
+
+.button.pink70 {
+  background-color: var(--pink70);
+  border-color: var(--pink70);
+}
+
+.button.yellow70 {
+  background-color: var(--yellow70);
+  border-color: var(--yellow70);
+}
+
+.button.pink70:hover {
+  background-color: var(--pink);
+  color: white;
+}
+
+.button.yellow70:hover {
+  background-color: var(--yellow);
+  color: white;
+}
+
+.button.cancel {
+  background-color: var(--black70);
+  border-color: var(--black70);
+}
+
+.button.cancel:hover {
+  background-color: black;
+  color: white;
 }
 
 .splash {
