--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1513,6 +1513,7 @@ select {
   --yellow10: rgba(240, 154, 53, 0.1);
   --yellow30: rgba(240, 154, 53, 0.3);
   --yellow40: rgba(240, 154, 53, 0.4);
+  --yellow70: rgba(240, 154, 53, 0.7);
   --pink: rgb(234, 78, 80);
   --pink30: rgba(234, 78, 80, 0.3);
   --pink50: rgba(234, 78, 80, 0.5);
@@ -2611,16 +2612,13 @@ a:hover {
   padding: 10px 0;
 }
 
-.price {
-  float: right;
-}
-
 #Rates > div {
   margin-bottom: 2em;
 }
 
 #Rates .price {
   padding-left: 5px;
+  float: right;
 }
 
 #Rates .splash {
