--- a/resources/sass/style.css
+++ b/resources/sass/style.css
@@ -1091,7 +1091,7 @@ a:hover {color:var(--pink);}
 }
 
 .alert{
-    background-color: red !important;
+    background-color: var(--pink) !important;
     color: white !important;
     font-weight: 700 !important;
     position:absolute;
@@ -1101,7 +1101,7 @@ a:hover {color:var(--pink);}
     margin: 0 !important;
     border-radius: 3px;
     border-width: 0 !important;
-    box-shadow: 0 0 3px 3px rgb(230,230,230); 
+    box-shadow: 0 0 3px 3px var(--pink70); 
     white-space: nowrap;
     font-size: 0.8em;
     text-transform: uppercase;
@@ -1134,13 +1134,16 @@ a:hover {color:var(--pink);}
 
 #checkmark {color:green;font-size: 1.7em}
 
-.checkmark {
+.checkmark, .xMark {
     color:green;
     font-size: 1.7em;
     position:absolute;
     top:50%;
     padding:4px;
     transform: translateY(-50%);
+}
+.xMark {
+    color: var(--pink);
 }
 
 #LoginForm, #SecurityBox{
