--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3114,21 +3114,6 @@ a:hover {
   border-top-style: dotted;
 }
 
-#Notifications .indicator {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  -webkit-transform: translate(50%, 50%);
-          transform: translate(50%, 50%);
-  background-color: var(--pink90);
-  padding: 0.1em 0.5em;
-  color: white;
-  box-shadow: 0 0 3px 3px var(--white30);
-  border-radius: 1em;
-  font-size: 0.8em;
-  font-weight: bold;
-}
-
 #Notifications .multiBtns .button {
   margin: 1em 0.5em;
 }
@@ -3161,8 +3146,24 @@ a:hover {
   background-color: var(--yellow10);
 }
 
+#Notifications .indicator {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  -webkit-transform: translate(50%, 50%);
+          transform: translate(50%, 50%);
+  background-color: var(--pink90);
+  padding: 0.1em 0.5em;
+  color: white;
+  box-shadow: 0 0 3px 3px var(--white30);
+  border-radius: 1em;
+  font-size: 0.8em;
+  font-weight: bold;
+}
+
 #Notifications li .indicator {
   top: 50%;
+  right: 0;
   width: 10px;
   height: 10px;
   padding: 0;
@@ -3178,6 +3179,23 @@ a:hover {
   box-shadow: 0 0 3px 3px var(--pink30);
 }
 
+#Notifications li .time {
+  position: absolute;
+  left: 0;
+  text-align: right;
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+  width: 4em;
+}
+
+#Notifications li:hover .time {
+  opacity: 1;
+}
+
+#Notifications li.active .time {
+  opacity: 1;
+}
+
 #Notifications .list {
   display: none;
   min-width: 15em;
@@ -3185,6 +3203,8 @@ a:hover {
   border-radius: 0 0 5px 5px;
   border: 4px solid rgba(240, 240, 240, 0.97);
   border-top-style: dotted;
+  max-height: calc(100vh - 7em);
+  overflow-y: auto;
 }
 
 #Notifications .button {
