--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2146,7 +2146,8 @@ a:hover {
   right: 7em;
 }
 
-#booknow {
+#booknow,
+#portal_home {
   font-weight: bold;
   color: var(--pink);
   font-size: 1em;
