--- a/resources/sass/style.css
+++ b/resources/sass/style.css
@@ -641,8 +641,14 @@ a:hover {color:var(--pink);}
     cursor: pointer;
     transition: color 500ms;
 }
+.button.link{
+    text-decoration: none;
+}
 .link:hover{
     color: var(--pink);
+}
+.button.link:hover{
+    color: var(--white70);
 }
 
 
@@ -1232,7 +1238,7 @@ a:hover {color:var(--pink);}
 #Notifications li {
     border: 4px solid transparent;
     border-width: 0 4px;
-    margin: 0 -4px;
+    margin: 0;
     position: relative;
     cursor: pointer;
     transition: border-color 400ms, background-color 400ms;
