--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -1480,7 +1480,7 @@ input#PatientName {
 }
 
 .optionsNav .navHead{
-    padding: 1em;
+    /*padding: 1em;*/
 }
 
 .number {
@@ -1635,8 +1635,8 @@ input#PatientName {
     background-color: transparent;
     /*border-radius: 5px;*/
     border-style: solid;
-    border-width: 0 0 2px 0;
-    border-color: var(--purple);
+    border-width: 0 0 1px 0;
+    border-color: var(--purple30);
     transition: height 1200ms;
     vertical-align: middle;
 }
@@ -1678,11 +1678,15 @@ input#PatientName {
     height: 0;
     opacity: 0;
 }
+.optionsNavWrapper{
+    position: relative;
+}
 .optionsNav .navDetails{
     /*max-width: 500px;*/
-    padding: 1em 0;
-    border: 1px solid var(--purple);
-    border-width: 1px 0 0 0;
+    display: none;
+    /*padding: 1em 0;*/
+    /*border: 1px solid var(--purple);*/
+    /*border-width: 1px 0 0 0;*/
     font-size: 0.9em;
 }
 .optionsNav .toggleDetails{
@@ -1691,17 +1695,19 @@ input#PatientName {
     font-size: 0.8em;
     background: linear-gradient( transparent, var(--purple10));
     /*background-color: var(--purple10);*/
-    border-width: 1px 0 0 0;
+    /*border-width: 1px 0 0 0;*/
     border-style: solid;
     border-color: var(--purple30);
     color: var(--purple);
-    transition: background-color 400ms;
+    /*transition: background-color 400ms;*/
 }
 .optionsNav .toggleDetails .arrow{
     height: 1.2em;
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
+    opacity: 0.5;
+    transition: opacity 0.5s;
 }
 .optionsNav .toggleDetails.down .arrow{
     background-image: url(/images/icons/arrow-down.png);
@@ -1709,28 +1715,27 @@ input#PatientName {
 .optionsNav .toggleDetails.up .arrow{
     background-image: url(/images/icons/arrow-up.png);
 }
-.optionsNav .toggleDetails:hover{
-    background-color: var(--purple15);
-}
-.navDetails{
-    display: none;
+.optionsNav .toggleDetails:hover .arrow{
+    opacity: 1;
 }
 .optionsNav .name {
     position: relative;
     display: inline-block;
-    padding: 0.5em;
-    margin: 0 10px 10px 10px;
+    /*padding: 0.5em;*/
+    /*margin: 0 10px 10px 10px;*/
     font-weight: 700;
-    background-color: var(--purple);
-    color: white;
-    border-radius: 5px;
-    border-style: solid;
-    border-width: 1px;
-    border-color: var(--purple);
+    font-size: 1.2em;
+    /*background-color: var(--purple);*/
+    /*color: white;*/
+    color: var(--purple);
+    /*border-radius: 5px;*/
+    /*border-style: solid;*/
+    /*border-width: 1px;*/
+    /*border-color: var(--purple);*/
 }
 .optionsNavHeader{
     display: none;
-    margin-bottom: -1em;
+    /*margin-bottom: -1em;*/
 }
 .optionsNavHeader .hide{
     display: inline-block;
